# RPAcometidos

./: .gitignore  CODEOWNERS  README.md  pyproject.toml
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/router/: index.js
frontend/src/views/: Home.vue  ValidacionDatos.vue
src/rpacometidos/: app.py  lector_excel.py  procesador_datos.py
src/rpacometidos/vue/: index.html
src/rpacometidos/vue/assets/: index-BEz_47qL.js
