[project]
name = "rpacometidos"
version = "0.1.0"
description = ""
authors = [
    {name = "t0mydev",email = "tomas.armijoc@usm.cl"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "playwright (>=1.60.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "rapidfuzz (>=3.14.5,<4.0.0)",
    "requests (>=2.34.2,<3.0.0)",
]

[tool.poetry]
packages = [{include = "rpacometidos", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
